--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,95 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  letter-spacing: 0.1em;
+}
+
+h1 {
+  color: #06365f;
+  width: 75%;
+}
+
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 750;
+}
+
+li {
+  list-style: none;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%;
+  margin: 100px auto 70px auto;
+}
+
+.right-container {
+  width: 50%;
+}
+
+.top-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+}
+
+.logo {
+  width: 70%;
+}
+
+button {
+  background-color: #648faf;
+  padding: 10px 20px;
+  border: 1px solid #06365f;
+  box-shadow: 0 1px 1px #06365f;
+}
+
+.right-container a {
+  color: white;
+  font-weight: bold;
+}
+
+.main-text {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 20px;
+}
+
+.bottom-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 70%;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  margin-bottom: 50px;
+}
+
+.footer-links a {
+  color: #1c5380;
+}
+
+.footer-links li {
+  padding: 10px;
+}
+
+.copy {
+  color: #c0c0c0;
 }
