--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,61 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+button {
+  background-color: #1c5380;
+  border-color: #1c5380;
+  text-align: right;
+  font-size: 1.2em;
+  text-decoration: #D3D3D3;
+  align-items: center;
+}
+.first-section {
+  width: 40%;
+  flex: 1 1 auto;
+  margin: 0 auto;
+}
+h2 {
+  color: #1c5380;
+  font-weight: 450;
+  text-align: center;
+  margin-top: -50px;
+  padding: 1.5em;
+}
+p {
+  text-align: center;
+}
+.uppercase {
+  text-transform: uppercase;
+}
+.white {
+background-image: url("../images/frame.png");
+background-size: cover;
+position: relative;
+}
+.header {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  padding: 30px 0;
+}
+  .right-div {
+    width: 40%;
+    justify-content: flex-end;
+  }
+.flex {
+  display:flex;
+}
+
+footer {
+  list-style-type: none;
+  font-weight: 600;
+}
+.bar {
+  color: #1c5380;
+}
+.white {
+  text-decoration: #D3D3D3
 }
