--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,34 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+ font-family: sans-serif;
+  line-height: 1.5em;
+  letter-spacing: 2px;
+}
+
+.hero {
+
+  padding: 80px;
+  background: url(../images/bgtile.png)  ;
+  background-repeat: repeat-x ;
+  
+}
+
+.order-img-row{
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+
+}
+
+.order-img-column{
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 80px;
+  justify-content: center;
+
 }
