--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -57,16 +57,12 @@ button {
   border: none;
 }
 
-small {
-  position: relative;
-  left: 1000px;
-}
-
 .inicio {
   background-color: #1c5380;
   border: none;
-  margin: 17px;
+  margin: 120px 20px 0 20px;
   font-size: 1.2em;
   color: white;
   box-shadow: 2px 2px 10px #06365f;
+  height: 40%
 }
