--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,51 @@ light blue: #1c5380
 */
 
 body {
+
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin-left:40px;
+  margin-right:40px;
+  background-color: aliceblue;
+
+  
 }
+
+h1{
+  font-weight: 800 ;
+  font-size:50;
+  color: #06365f;
+  text-align: left;
+
+}
+.top-links li {
+  text-align: center;
+  font-size: 15px;
+  display: inline-block;
+  margin: 0 20px 0 0;
+  text-transform: uppercase;
+  color:#1c5380;
+  font-weight: 400;
+
+}
+.top-links {
+  font-style: normal
+  position  absolute  
+  
+}
+
+div {
+  height: 50%;
+  width: 50%;
+  background-image: url(../images/frame.png);
+  background-size: cover;
+ position: absolute;
+ left:800px;
+ top: 140px
+}
+
+ul {
+  position: absolute;
+  bottom: 200px;
+  left: 500px;
+}
+
