--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,67 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*{
+  padding: 0;
+  margin: 0;
+
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  display: flex;
+  justify-content: center ;
+  padding-top: 80px;
+  flex-wrap: wrap;
+
+}
+
+.rightSide{
+  width: 500px;
+  padding: 50px;
+}
+
+
+.topLogo{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+button{
+  width: 100px;
+  height: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #1c5380;
+  font-size: medium;
+  color: white;
+}
+
+
+
+.subTitle{
+  color: #1c5380;
+  padding-bottom: 20px;
+}
+
+.bottom{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 50px
+}
+
+.text{
+  
+}
+.download{
+  margin: 10px;
+}
+
+.download > img{
+  margin: 5px;
 }
