--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -49,7 +49,15 @@ h1 {
 }
 
 .nav {
-  display: flex;
-  flex-flow: row;
-  align-items: baseline;
+  border: 1px solid #ccc;
+  border-width: 1px 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  justify-content: baseline;
+}
+
+.nav li {
+  display: inline;
 }
