--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,48 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+}
+nav {
+  padding-top: 200px;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.centerStuff {
+  background-image: url("../images/bgtile.png");
+  height: 200px;
+  display: flex;
+  padding: 10% 10%;
+  align-items: stretch;
+}
+.centerStuff > div {
+  flex-direction: row;
+}
+.rightColumn {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+.images {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: space-between;
+}
+
+.logIn {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+  align-content: space-between;
+}
+.textBlock {
+  background-color: white;
+  padding: 5% 5%;
 }
