--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,17 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.main-container {
+  display: flex;
+  /*flex-direction: column;*/
+}
+
+.container-left {
+}
+
+.container-right {
 }
