--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,61 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+ 
+  background-image: url(/Users/chanty/Desktop/lab-CSS-instagram/lab-css-instagram-clone/starter-code/images/bgtile.png);
+background-repeat: repeat-x;
+justify-content: center;
+padding-top: 80px;
+}
+
+main {
+  width: 1200px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.img {
+  size: 20vw;
+  display: flex;
+  flex-wrap: wrap;
+  height: 400px;
+  align-content: space-between;
+}
+
+
+.content {
+  margin: auto;
+  border: 5px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  height: 400px;
+  align-content: space-between;
+  
+}
+
+.footer {
+  border: 5px solid red;
+  height: 100px;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+}
+
+.AboutUS {
+  list-style: none;
+  padding: 5px;
+  margin: 10px;
+  font-size: 1em;
+align-items: 
+  color: #06365f;
+  justify-content: center;
 }
