--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,71 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+.blue-background {
+  height: 300px;
+  width: 1400px;
+  background-image: url("../images/bgtile.png");
+  
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+main {
+  display: flex;
+  
+}
+.all-content {
+  margin-top: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 0 40px 0 100px;
+  max-width: 1000px;
+  
+  
+}
+.content-right {
+  display: flex;
+  flex-direction: column;
+  
+}
+.content-right-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  
+}
+.log-button{
+  display: flex;
+  flex-direction: row;
+  justify-content: center
+  border: 2px solid #06365f;
+  height: 20px;
+  margin-top: 10px;
+  padding: 5px;
+  color: white;
+  background-color: #1c5380;
+
+}
+.content-right-body {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding: 20px;
+  background-color: white;
+}
+h1 {
+  font-size: 1.2em;
+  color: #06365f;
+}
+
+.content-right-bottom {
+  display: flex;
+  flex-direction: row;
+}
+.footer {
+  display: flex;
+  flex-direction: row;
 }
