--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,19 +4,104 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* * {
+  padding: 0;
+  margin: 0;
+} */
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-image: url(../images/bgtile.png);
   background-repeat: repeat-x;
-}
-
-.outer-container {
-  display: flex;
   flex-direction: row;
+  display: flex;
+  width: 100%;
   justify-content: center;
 }
 
 .phone-image {
+  margin-right: 60px;
+  margin-top: 60px;
+}
+
+.info-box {
   display: flex;
+  margin-top: 60px;
+  flex-direction: column;
+  width: 500px;
+  justify-content: space-around;
+}
+
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-content: baseline;
+  align-items: center;
+}
+
+button {
+  height: 40px;
+  width: 80px;
+  padding: 5px;
+  background-color: #1c5380;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+  color: white;
+}
+
+.white-box {
+  background-image: url(../images/frame.png);
+  border-radius: 5px;
+  background-repeat: no-repeat;
+  display: flex;
+  margin-left: 25px;
+}
+
+.text {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 30px 30px 10px 30px;
+}
+
+p {
+  font-size: 14px;
+  padding: 0px 30px 10px 30px;
+}
+
+.downloads {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.android {
+  margin-left: 30px;
+}
+
+ul {
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  margin-top: 150px;
+  justify-content: center;
+  align-content: space-around;
+  margin-top: 40px;
+}
+
+li {
+  color: #1c5380;
+  font-size: 14px;
+  font-weight: bold;
 }
