--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -9,9 +9,10 @@ body {
   flex-direction: column;
 }
 nav {
-  padding-top: 200px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: flex-end;
+  height: 300px;
 }
 
 .centerStuff {
@@ -29,21 +30,25 @@ nav {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: stretch;
+  margin: 0 2%;
 }
 .images {
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
+  background-color: white;
 }
 
 .logIn {
-  width: 200px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-
-  align-content: space-between;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
+.instagramLogo {
+  flex-shrink: 1;
+}
+
 .textBlock {
   background-color: white;
   padding: 5% 5%;
