--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,167 +1,71 @@
-.up {
-  background-image: url("../images/bgtile.png");
-  color: black;
-  background-repeat: repeat-x;
- }
- .header {
-  display: flex;
-  justify-content: space-evenly;
-  align-content: center;
-  padding-top: 200px;
- }
- 
- .header-icons {
-  width: 60%;
-  display: flex;
-  justify-content: space-between;
- }
- 
- .appstore-icons {
-  align-items: center;
-  display: flex;
- }
- 
- .iphonelogo {
-  padding-right: 10px;
-  padding-left: 10px;
- }
- .header-text {
-  background-color: white;
- }
-
- .footer-row {
-  display: flex;
-  justify-content: center;
-  align-content: flex-start;
-}
-
-.footer-items {
-  display: flex;
-  flex-direction: row;
-  width: 60%;
-  justify-content: space-between;
-  font-weight: bold;
-  list-style-type: none;
-  align-items: baseline;
-}
-
-
-.footer-items .menu {
-  color: #3f729b;
-}
-
-.footer-items .copywrite {
-  color: grey;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-/* OLD CODE
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-
-
-
-[Bana] questions:
-1. tried to use percentage for height / width. However, header-row height percentage doesn't work
-2. how do I make devices and text overlapp with header
-3. how can I make the login box look more like on the template?
-4. are their best practices for media rules. At what point does it make sense to apply a different css style
-or do I need to test it out myself? If so, are there tools that help with specs of most common screen sizes?
-
-
-
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+.container {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x; 
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+  height: 800px;
+  justify-content: center;
 }
 
-
-
-.header-row {
-  background-color: #3f729b;
-  height: 350px; 
-  width: 100%;
+.main {
+  align-self: center;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  padding-bottom: 30px;
+  margin-bottom: 20px;
+}
+
+.main-right {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+  margin-left: 30px;
 }
 
 .header-icons {
-  width: 60%;
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  
 }
 
-.login-button {
-  background-color: #436b95;
-  border: 1px solid #436b95;
+.header-icons button {
+  background-color: #3f729b;
   color: white;
   font-weight: bold;
-  display: flex;
-  width: 20%;
-  height: 5%;
-  justify-content: space-around;
-  align-items: center;
-  
-  
+  border: 1px solid #3f729b;
 }
 
-
-
-.main-row {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-  margin-bottom: 5%;
+.header-icons .brand {
+  padding-right: 20px;
+  margin-right: 50px;
 }
 
-.description {
-  background-image: url("images/frame.png");
-  width: 40%;
+.main-text {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
 }
 
-.description h1 {
+.main-text h1 {
   color: #003366;
 }
 
-.description span {
-  font-weight: bold;
-}
-.iphone-badge{
-  margin-right: 5%;
-}
-
-
-
-.footer-row {
-  display: flex;
-  justify-content: center;
+.appstore-icons .applestore {
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .footer-items {
   display: flex;
-  flex-direction: row;
-  width: 60%;
   justify-content: space-between;
   font-weight: bold;
+  list-style-type: none;
 }
 
-.footer-items{
-  list-style-type: none
-}
 
 .footer-items .menu {
   color: #3f729b;
@@ -169,6 +73,12 @@ body {
 
 .footer-items .copywrite {
   color: grey;
-} 
+}
 
-*/
+
+
+
+
+
+
+
