--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -11,29 +11,67 @@ body {
 }
 .container {
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 900px;
   border: 3px solid red;
 }
 h3 {
   color: #06365f;
   font-size: 1.8em;
-  width: 70%;
+  width: 85%;
   line-height: 1.3em;
 }
-.cellphone {
-  float: left;
-  width: 30%;
+/* Right - Main container */
+
+.mainInfo {
+  width: 60%;
 }
 
-/* Main container */
-
 .description {
+  width: 60%;
   padding: 30px 90px;
+  background-color: white;
   background: url("../images/frame.png") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+/* Left - Big cellphones */
+.cellphone {
+  float: left;
+  width: 35%;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.cellphone img {
+  width: 100%;
+  padding: 10px;
+}
+
+/* Big logo */
+
+.instaLogin {
+  display: flex;
+  justify-content: space-between;
+}
+.instaLogin button {
+  background-image: linear-gradient(#6e92b1, #315e86);
+  border: none;
+  color: white;
+  text-align: left;
+  border-radius: 5px;
+  padding: 10px 20px;
+  box-shadow: 0px 0px 5px #06365f;
+}
+.homeIcon {
+  background: url(../images/home.png) no-repeat;
+  float: left;
+  width: 25px;
+  margin-right: 10px;
+  height: 25px;
+  background-size: contain;
 }
 
 /* Footer */
