--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -13,6 +13,7 @@ body {
   margin: 0 auto;
   max-width: 900px;
   border: 3px solid red;
+  display: flex;
 }
 h3 {
   color: #06365f;
@@ -24,11 +25,11 @@ h3 {
 
 .mainInfo {
   width: 60%;
+  margin: 0 5%;
 }
 
 .description {
-  width: 60%;
-  padding: 30px 90px;
+  padding: 30px 40px;
   background-color: white;
   background: url("../images/frame.png") no-repeat center center;
   -webkit-background-size: cover;
@@ -55,6 +56,8 @@ h3 {
 .instaLogin {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 2em 0 1em 0;
 }
 .instaLogin button {
   background-image: linear-gradient(#6e92b1, #315e86);
@@ -64,14 +67,21 @@ h3 {
   border-radius: 5px;
   padding: 10px 20px;
   box-shadow: 0px 0px 5px #06365f;
+  height: 100%;
 }
 .homeIcon {
   background: url(../images/home.png) no-repeat;
   float: left;
-  width: 25px;
+  width: 20px;
   margin-right: 10px;
-  height: 25px;
+  height: 20px;
   background-size: contain;
+}
+
+/* Download app */
+
+.store img {
+  display: inline;
 }
 
 /* Footer */
