--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,11 +7,14 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+	background: -webkit-linear-gradient(top, #1c5380, #1c5380 50%, white 50%, white);
 }
 
 .wrapper {
-	margin: 10% auto;
-	width: 60%;
+	margin: 0 auto;
+	height: 90%;
+	padding: 3% 0 0 0;
+	width: 80%;
 	display: grid;
 	grid-template-columns: 2fr 3fr;
 	grid-auto-rows:max-content;
@@ -25,10 +28,6 @@ body {
 	align-items: center;
 }
 
-.image-container img {
-	margin-left: 15%;
-}
-
 .text-container {
 	box-sizing: border-box;
 	border-style: solid;
@@ -36,6 +35,42 @@ body {
 	border-width: 2px;
 	overflow: hidden;
   position: relative;
+}
+
+.brand {
+	margin: 0 auto;
+	display: inline-block;
+	width: 50%;
+	box-sizing: border-box;
+	border-style: solid;
+	border-color: yellow;
+	border-width: 2px;
+}
+
+.login {
+	margin: 0 auto;
+	float: right;
+	box-sizing: border-box;
+	border-style: solid;
+	border-color: yellow;
+	border-width: 2px;
+	width: 50%;
+	height: auto;
+}
+
+.login .login-btn {
+	background-image: url('../images/home.png') no-repeat;
+	width: 30%;
+	float: center;
+	color: white;
+	text-align: center;
+  text-decoration: none;
+  display: block;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+}
+
+#clear {
+    clear: both;
 }
 
 .information {
@@ -52,7 +87,7 @@ body {
 	border-style: solid;
 	border-color: yellow;
 	border-width: 2px;
-	margin-bottom: 25%;
+	margin-bottom: 0%;
 }
 
 footer {
@@ -60,4 +95,7 @@ footer {
 	border-style: solid;
 	border-color: purple;
 	border-width: 2px;
+	padding: 2.5% 0;
+	margin: 0 auto;
+	text-align: center;
 }
