--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,20 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+.main-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+}
+
+.main-img-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid green;  
 }
