--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,37 +5,31 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background: url("../images/bgtile.png") repeat-x top;
   background-color: #f5f7f9;
-}
-.container {
-  margin: 0 auto;
-  max-width: 900px;
-  border: 3px solid red;
-  display: flex;
+  margin-top: 2rem;
+  margin-bottom: 0;
 }
 h3 {
   color: #06365f;
   font-size: 1.8em;
   width: 85%;
   line-height: 1.3em;
+  margin-top: 0;
 }
-/* Right - Main container */
-
-.mainInfo {
-  width: 60%;
-  margin: 0 5%;
+p {
+  font-size: 0.9em;
+}
+a {
+  color: white;
+  text-decoration: none;
 }
 
-.description {
-  padding: 30px 40px;
-  background-color: white;
-  background: url("../images/frame.png") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.container {
+  margin: 0 auto;
+  max-width: 900px;
+  display: flex;
 }
 
 /* Left - Big cellphones */
@@ -44,11 +38,29 @@ h3 {
   width: 35%;
   align-items: center;
   flex-wrap: wrap;
+  display: flex;
 }
 
 .cellphone img {
   width: 100%;
   padding: 10px;
+}
+
+/* Right - Main container */
+
+.mainInfo {
+  width: 60%;
+  margin: 0 5% 30px;
+}
+
+.description {
+  padding: 40px 40px 20px 40px;
+  background-color: white;
+  background: url("../images/frame.png") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* Big logo */
@@ -82,6 +94,7 @@ h3 {
 
 .store img {
   display: inline;
+  padding-left: 20px;
 }
 
 /* Footer */
@@ -94,9 +107,12 @@ footer ul {
   justify-content: space-around;
   list-style: none;
   text-transform: uppercase;
-  font-size: 0.75em;
+  font-size: 0.7em;
   height: 40px;
   align-items: center;
+  width: 900px;
+  padding: 0 140px;
+  margin-bottom: 30px;
 }
 .copyrigth {
   color: #cbcbcb;
