--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,12 +15,50 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid red;
+  padding: 2em 10em;
 }
 
 .main-img-content {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid green;  
+}
+
+.main-img-content {
+  padding: 1em 0 1em 1em;
+  width: 90%;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: stretch;
+  align-items: stretch;
+  height: 30em; 
+}
+
+.content-header {
+  /* margin: -3em 0em 0em 0em; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.content-header img{
+  margin-left: 1em;
+  /* margin-top: -2em; */
+}
+
+.content-body {
+  padding: 0em 5em;
+  background: url("../images/frame.png") no-repeat center center;
+}
+
+.content-bottom {
+  padding: 1.5em 4em 0em;
+}
+
+.content-bottom span:first-child{
+  margin-right: 1em;
 }
