--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,117 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.space {
+  border: 1px solid gray;
+  /* height: 25%; */
+  padding: 10%;
+  background-color: #537a9d;
+}
+
+.phones-div {
+  float: left;
+  position: relative;
+  top: 40%;
+  padding-top: 2%;
+  margin-top: -10%;
+  padding-left: 10%;
+  height: 20%;
+  width: 20%;
+  /* border: 2px solid green; */
+}
+
+.phones-img {
+  width: 115%;
+  height: 115%;
+}
+
+.paragraph {
+  padding: 2%;
+}
+
+h3 {
+  width: 55%;
+  font-size: 140%;
+  font-weight: bold;
+  color: #133559;
+  padding-bottom: 2%;
+  margin-top: -17%;
+}
+
+.main-div {
+  margin-top: -15%;
+}
+.info-div {
+  /* border: 3px solid blue; */
+  width: 38%;
+  height: 100%;
+  /* padding-left: 23%; */
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  margin-left: 40%;
+  margin-top: 10%;
+  margin-bottom: 0%;
+  text-align: left;
+  /* padding-top: -10%; */
+  padding-left: 2%;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.brand {
+  /* border: 2px solid red; */
+  margin-top: 10%;
+  margin-left: -0%;
+  margin-bottom: 4%;
+  padding-bottom: 0%;
+  padding-left: 0%;
+}
+
+.brand img {
+  width: 45%;
+  height: 45%;
+  margin-top: -10%;
+  padding-bottom: 18%;
+}
+
+.badge-img {
+  padding-top: 2%;
+}
+
+.badge-android {
+  float: right;
+  margin-top: -13%;
+  padding-right: 20%;
+}
+
+footer {
+  text-align: center;
+  padding-top: 3%;
+  padding-bottom: 2%;
+}
+
+footer a {
+  margin: 1%;
+  text-decoration: none;
+  color: #567ea0;
+  font-weight: bold;
+  font-size: 75%;
+}
+
+.trademark {
+  color: #a6a7a6;
+  text-transform: capitalize;
+  font-size: 75%;
 }
