--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,51 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+footer,
+section,
+.flex {
+  display: flex;
 
+  padding: 0 10% 0 10%;
+}
+
+.horizontal-flex {
+  flex-direction: row;
+  justify-content: space-around;
+}
+.vertical-flex {
+  flex-direction: column;
+  justify-content: space-between;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-size: auto 30em;
+}
+
+section {
+  height: 30em;
+  justify-content: center;
+}
+footer {
+  justify-content: space-around;
+  padding: 10% 15% 0 15%;
+}
+.cell-img-cont {
+  width: 70%;
+  height: 100%;
+}
+
+.cell-img {
+  width: 100%;
+  height: 100%;
+}
+
+#txt-cont {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+}
+#txt-cont p {
+  word-wrap: break-word;
 }
