--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,115 +7,82 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-	background: -webkit-linear-gradient(top, #1c5380, #1c5380 50%, white 50%, white);
+  background: -webkit-linear-gradient(
+    top,
+    #1c5380,
+    #1c5380 50%,
+    white 50%,
+    white
+  );
 }
 
 .wrapper {
-	margin: 0 auto;
-	height: 90%;
-	padding: 3% 0 0 0;
-	width: 80%;
-	display: grid;
-	grid-template-columns: 2fr 3fr;
-	grid-auto-rows:max-content;
+  margin: 0 auto;
+  height: 90%;
+  padding: 3% 0 0 0;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  grid-auto-rows: max-content;
 }
 
 .image-container {
-	display: grid;
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: red;
-	border-width: 2px;
+  display: grid;
 }
 
 .image-container img {
-	align-self: center;
+  align-self: center;
   justify-self: center;
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: red;
-	border-width: 2px;
 }
 
 .text-container {
-	display: grid;
-	grid-template-columns: 1 fr;
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: blue;
-	border-width: 2px;
+  display: grid;
+  grid-template-columns: 1 fr;
 }
 
 .head {
-	display: grid;
-	grid-template-columns: repeat(2, [col] 1fr);
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: grey;
-	border-width: 2px;
-	grid-auto-rows: (100px, auto);
+  display: grid;
+  grid-template-columns: repeat(2, [col] 1fr);
+  grid-auto-rows: (100px, auto);
 }
 
 .brand {
-	grid-column: 1;
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: yellow;
-	border-width: 2px;
-	margin: auto;
+  grid-column: 1;
+  margin: auto;
 }
 
 .login {
-	margin: auto 0;
-	grid-column: 2;
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: yellow;
-	border-width: 2px;
-	/*height: auto;*/
+  margin: auto 0;
+  grid-column: 2;
+  /*height: auto;*/
 }
 
 .login a {
-	background-image: url('../images/home.png');
-	width: 100%;
-	text-size: 10em;
-	color: white;
-	text-align: center;
+  background-image: url("../images/home.png");
+  width: 100%;
+  text-size: 10em;
+  color: white;
+  text-align: center;
   text-decoration: none;
   /*display: block;*/
   border: 2px solid rgba(0, 0, 0, 0.2);
 }
 
 .information {
-	background-image: url("../images/frame.png");
-	background-size: cover;
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: green;
-	border-width: 2px;
-	/*height: 100%;
-	position: absolute;*/
+  background-image: url("../images/frame.png");
+  background-size: cover;
 }
 
-.info-container{
-	width: 60%;
-	margin-left: 5%;
+.info-container {
+  width: 60%;
+  margin-left: 5%;
 }
 
 .app-download {
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: yellow;
-	border-width: 2px;
-	/*margin-bottom: 0%;*/
 }
 
 footer {
-	box-sizing: border-box;
-	border-style: solid;
-	border-color: purple;
-	border-width: 2px;
-	padding: 2.5% 0;
-	margin: 0 auto;
-	text-align: center;
+  padding: 2.5% 0;
+  margin: 0 auto;
+  text-align: center;
 }
