--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,79 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+header {
+  position: relative;
+  height: 350px;
+  width: 100%;
+  background-color: #1c5380;
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  align-items: flex-end;
+  
+}
+#titulo {
+  position: absolute;
+  display:flex;
+  padding-bottom: 200px;
+
+  margin-left: 50%;
+  font-size: 18px;
+}
+#login {
+  background-color: #1c5380;
+  font-size: 30px;
+  margin-top: 15px;
+  margin-left: 100px;
+  height: 50px;
+  border: 1px solid #06365f;
+  color:white;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 15px;
+}
+
+#phones{
+  position: absolute;
+  margin-left: 20%;
+  bottom: 325px;
+}
+
+section {
+  
+  position:absolute;
+  background-color: white;
+  width: 575px;
+  right: 5px;
+  top: 150px;
+  height: 425px;
+  border:1px solid white;
+  text-align: left;
+  color: gray;
+  font-size: 18px;
+  padding: 20px;
+  border-radius: 15px;
+
+}
+section h2 {
+  
+  font-size: 30px;
+  width: 325px;
+  color: #06365f;
+}
+
+section div {
+  margin-top: 60px
+}
+footer {
+  top: 270px;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  word-spacing: 15px;
+  color: #1c5380;
+  font-size: 18px;
+
+}
+
+
